--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,2 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 /* font-family: 'Open Sans', sans-serif; */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    margin: 3.2rem 14rem;
+}
+
+.nav-bar li {
+    list-style: none;
+    margin-left: 3.2rem;
+}
+
+.nav-title {
+    font-style: normal;
+    font-weight: 800;
+    color: #181818;
+    font-size: 2.8rem;
+    line-height: 3.8rem
+}
+
+.text-primary {
+    color: #FD6E0A;
+}
+
+.nav-items {
+    display: flex;
+}
