--- a/styles/shared.css
+++ b/styles/shared.css
@@ -14,7 +14,7 @@
     margin: 3.2rem 14rem;
 }
 
-.nav-bar li {
+.nav-bar .nav-item {
     list-style: none;
     margin-left: 3.2rem;
 }
@@ -24,7 +24,7 @@
     font-weight: 800;
     color: #181818;
     font-size: 2.8rem;
-    line-height: 3.8rem
+    line-height: 3.8rem;
 }
 
 .text-primary {
