--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,55 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 /* font-family: 'Open Sans', sans-serif; */
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    margin: 3.2rem 14rem;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 3.2rem 14rem;
+  align-items: center;
 }
 
 .nav-items {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav-item {
-    list-style: none;
-    margin-left: 3.2rem;
+  list-style: none;
+  margin-left: 3.2rem;
 }
 
 .nav-item {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: #474747;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #474747;
 }
 
 .nav-title {
-    font-style: normal;
-    font-weight: 800;
-    color: #181818;
-    font-size: 2.8rem;
-    line-height: 3.8rem;
+  font-style: normal;
+  font-weight: 800;
+  color: #181818;
+  font-size: 2.8rem;
+  line-height: 3.8rem;
 }
 
 .text-primary {
-    color: #FD6E0A;
+  color: #fd6e0a;
 }
 
 .nav-item--cta {
-    padding: 1.2rem 2.2rem;
-    background: #FD6E0A;
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    height: 64px;
+  padding: 1.2rem 2.2rem;
+  background: #fd6e0a;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  height: 64px;
+}
+
+.banner {
+    display: flex;
+    margin: 11.5rem 14rem;
+    align-items: center;
+}
+
+.banner .banner-greet,
+.banner-title {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+  color: #474747;
+}
+
+.banner .banner-title {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 5.25rem;
+  color: #181818;
+}
+
+.banner-subtitle_holder {
+  width: 40rem;
+  height: 4rem;
+}
+
+.banner .banner-subtitle {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: #757575;
+  text-align: left;
 }
