--- a/styles/shared.css
+++ b/styles/shared.css
@@ -117,7 +117,7 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
-
+/* About me */
 .about-me {
   margin-top: 130px;
   background: #fff8f3;
@@ -154,5 +154,42 @@ main {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  
+}
+
+/* What I do */
+
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+
+.skill img {
+  margin-bottom: 30px;
+}
+
+.skill-title {
+  font-style: normal;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 20px;
+  color: #181818;
+}
+
+.skill-description {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #757575;
+}
+
+section {
+  margin-top: 130px;
 }
