--- a/styles/shared.css
+++ b/styles/shared.css
@@ -127,7 +127,7 @@ main {
 
 .section-title {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   font-size: 35px;
   font-weight: 700;
 }
@@ -192,4 +192,26 @@ main {
 
 section {
   margin-top: 130px;
+}
+
+/* resume */
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+
+.resume .title {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+}
+
+.resume .sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.resume .description {
+  color: #757575;
 }
