--- a/styles/shared.css
+++ b/styles/shared.css
@@ -200,18 +200,37 @@ section {
   gap: 24px;
 }
 
-.resume .title {
+.resume-item {
+  margin: 30px 0;
+}
+
+.resume-content .resume-title {
+  margin-bottom: 30px;
+  font-style: normal;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 30px;
   color: #474747;
 }
 
-.resume .sub-title {
+.resume-item .title {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+  margin-bottom: 10px;
+}
+
+.resume-item .sub-title {
   color: #757575;
   font-weight: 600;
   font-size: 20px;
+  margin-bottom: 20px;
 }
 
-.resume .description {
+.resume-item .description {
   color: #757575;
+}
+
+.resume-download-option {
+  margin-top: 50px;
+  text-align: center;
 }
