--- a/styles/main.css
+++ b/styles/main.css
@@ -59,7 +59,7 @@
   color: #ffffff;
   border: none;
   border-radius: 5px;
-  height: 64px;
+  height: 4rem;
 }
 
 .banner {
@@ -84,58 +84,58 @@
 
 .banner-description {
   color: #757575;
-  font-size: 18px;
-  margin-bottom: 30px;
+  font-size: 1.125rem;
+  margin-bottom: 1.875rem;
 }
 
 .download {
-  width: 200px;
-  height: 64px;
+  width: 12.5rem;
+  height: 4rem;
   background-color: #fd6e0a;
   border: none;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-right: 1.875rem;
   font-style: normal;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-align: center;
   color: #ffffff;
 }
 
 .contact-me {
-  width: 160px;
-  height: 64px;
+  width: 10rem;
+  height: 4rem;
   color: #fd6e0a;
   border-color: #fd6e0a;
   font-style: normal;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-align: center;
 }
 
 main {
-  max-width: 1140px;
+  max-width: 72rem;
   margin: 0 auto;
 }
 /* About me */
 .about-me {
-  margin-top: 130px;
+  margin-top: 8.125rem;
   background: #fff8f3;
   border-radius: 10px;
-  padding: 130px 150px;
+  padding: 8.125rem 9.375rem;
 }
 
 .section-title {
   text-align: center;
-  margin-bottom: 50px;
-  font-size: 35px;
+  margin-bottom: 3.125rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 
 .section-description {
   color: #757575;
-  font-size: 18px;
-  margin-bottom: 30px;
+  font-size: 1.125rem;
+  margin-bottom: 2rem;
   font-weight: 400;
   text-align: center;
 }
@@ -146,84 +146,84 @@ main {
 }
 
 .about-info_title {
-  font-size: 20px;
+  font-size: 1.25rem;
   color: #757575;
 }
 
 .about-info_description {
   font-style: normal;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 /* What I do */
 
 .skills-container {
   display: flex;
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 .skill {
   background: #ffffff;
   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
-  padding: 30px;
+  padding: 2rem;
 }
 
 .skill img {
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
 }
 
 .skill-title {
   font-style: normal;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 2rem;
+  margin-bottom: 1.25rem;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 1.25rem;
   color: #181818;
 }
 
 .skill-description {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   color: #757575;
 }
 
 section {
-  margin-top: 130px;
+  margin-top: 8.125rem;
 }
 
 /* resume */
 .resume-content {
   display: flex;
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 .resume-item {
-  margin: 30px 0;
+  margin: 2rem 0;
 }
 
 .resume-content .resume-title {
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
   font-style: normal;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 2rem;
   color: #474747;
 }
 
 .resume-item .title {
   font-weight: 700;
-  font-size: 25px;
+  font-size: 1.5rem;
   color: #474747;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .resume-item .sub-title {
   color: #757575;
   font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 20px;
+  font-size: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .resume-item .description {
@@ -231,52 +231,52 @@ section {
 }
 
 .resume-download-option {
-  margin-top: 50px;
+  margin-top: 3.125rem;
   text-align: center;
 }
 
 /* contact section */
 .contact {
   display: flex;
-  gap: 100px;
+  gap: 6.25rem;
   background: #fff8f3;
-  padding: 130px 200px;
+  padding: 8.125rem 12.5rem;
 }
 
 .contact .section-title {
   text-align: left;
   font-style: normal;
   font-weight: 700;
-  font-size: 35px;
+  font-size: 2rem;
 }
 
 .contact input[type="text"],
 input[type="email"],
 textarea {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
   border: none;
   width: 100%;
-  padding: 18px 30px;
+  padding: 1.125rem 1.875rem;
 }
 
 input {
-  height: 64px;
+  height: 4rem;
 }
 
 .section-description_contact {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   color: #474747;
 }
 
 .socials {
-  height: 24px;
+  height: 1.5rem;
   width: 200px;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .contact a {
   text-decoration: none;
-  margin-right: 24px;
+  margin-right: 1.5rem;
 }
