--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  margin: 3.2rem 14rem;
+  paddinggi: 3.2rem 14rem;
   align-items: center;
 }
 
